<resources>
    <string name="app_name">IHMNewJavaUpdate</string>
    <string name="email">Email</string>
    <string name="sign_in">sign In</string>
    <string name="password">password</string>
    <string name="sign_up">sign_up</string>
    <string name="login">login</string>
    <string name="forgot_password">forgot password</string>
    <string name="about_us">about us</string>
    <string name="create_account">create account</string>
    <string name="name">name</string>
    <string name="confirm_password">confirm password</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">confirm</string>
    <string name="edit_guest_bill">edit guest bill</string>
    <string name="message_guest">message guest</string>
    <string name="message_staff">message staff</string>
    <string name="log_out">log out</string>
    <string name="home">home</string>
    <string name="waiting">...</string>
    <string name="enter_message">Enter Message</string>
    <string name="beds">Beds:</string>
    <string name="food">Food:</string>
    <string name="other">Other:</string>
    <string name="total">Total:</string>
    <string name="nights">Nights:</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_125_56">125.56</string>
    <string name="_34_93">34.93</string>
    <string name="_0_00">0.00</string>
    <string name="calculate">calculate</string>
    <string name="messaging">messaging</string>
    <string name="do_not_disturb">do not disturb</string>
    <string name="bill">bill</string>
    <string name="update">update</string>
    <string name="clean_room">clean room</string>
    <string name="do_not_clean">do not clean</string>
    <string name="refresh">refresh</string>
    <string name="add_new_bill">Add New Bill</string>
    <string name="bills">Bills</string>
    <string name="name2">Name</string>
    <string name="password2">Password</string>
    <string name="confirm_password2">Confirm Password</string>
    <string name="name3">Name:</string>
    <string name="room_number">Room Number:</string>
    <string name="full_name">Full Name</string>
    <string name="nights3">Nights</string>
    <string name="_02">0</string>
    <string name="total3">Total</string>
    <string name="total2">Total</string>
    <string name="rooms">Rooms:</string>
    <string name="_100">100</string>
    <string name="full_name3">Full Name:</string>
    <string name="total6">Total $:</string>
    <string name="number_of_nights">Number of Nights:</string>
    <string name="totalA">Total = $</string>
    <string name="message">message</string>
    <string name="message2">message</string>
    <string name="message3">Message</string>
    <string name="spaceBet">:</string>
    <string name="time">Time</string>
    <string name="edit">Edit</string>
    <string name="update_guest_bill">Update Guest Bill</string>
    <string name="sign_in2">Sign In</string>
    <string name="sign_up2">Sign Up</string>
    <string name="create">create</string>
    <string name="home2">Home</string>
    <string name="front_desk">Front Desk</string>
    <string name="guest_billing">Guest Billing</string>
    <string name="message_staff4">Message Staff</string>
    <string name="about_us3">ABOUT US</string>
    <string name="this_application_will_allow_for_employees_to_communicate_with_one_another_the_employees_will_also_be_able_to_see_what_rooms_need_to_be_clean_furthermore_the_employees_will_also_be_able_to_update_the_guests_bills_the_employees_will_also_be_able_to_communicate_with_the_hotel_s_guests_and_be_able_to_respond_to_their_needs_while_for_the_guests_they_will_be_able_to_see_the_hotel_s_menu_and_their_bill_as_well_as_being_able_to_inform_the_hotel_that_they_would_like_to_have_their_room_clean_any_questions_or_requests_they_might_have_by_sebastian_roman">This application will allow for employees to communicate with one another. The employees will also be able to see what rooms need to be clean. Furthermore, the employees will also be able to update the guests\' bills. The employees will also be able to communicate with the hotel\'s guests and be able to respond to their needs. While, for the guests they will be able to see the hotel\'s menu and their bill. As well as being able to inform the hotel that they would like to have their room clean, any questions or requests they might have. By Sebastian Roman</string>
</resources>