<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".messagingOne">

    <Button
        android:id="@+id/messagingOneHome"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_botton"
        android:text="@string/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout10"
        android:layout_width="380dp"
        android:layout_height="400dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/rectangle_59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/messagedisplay"
            android:layout_width="360dp"
            android:layout_height="370dp"
            android:layout_marginTop="16dp"
            android:hint="@string/waiting"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout10">

        <EditText
            android:id="@+id/UserMessage"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/enter_message"
            android:inputType="textPersonName"
            android:textColorHint="#919090"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/sendMsgButton"
            android:layout_width="53dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/path_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>